fixing the erro of header overflow the screen size

--- a/header.css
+++ b/header.css
@@ -8,7 +8,7 @@ body{
 /* header */
 .header{
     position:fixed;
-    width: 100%;
+    width: 100vw;
     height: 10vh;
     display: grid;
     grid-template-columns: 1fr 1fr;
